admin panil front end

--- a/static/style.css
+++ b/static/style.css
@@ -104,6 +104,8 @@ body{
     border-style: solid;
     border-color: var(--blue);
     border-width: thick;
+    border-radius: 10%;
+    
     
 }
 
