--- a/templates/add_appointment.html
+++ b/templates/add_appointment.html
@@ -18,7 +18,7 @@
 
         {{appointment_form.selected_patient_name}}
 
-        {{appointment_form.submit(form='appointment_form')}}
+        {{appointment_form.submit(form='appointment_form', value='add appointment')}}
 
         
     </form>
