--- a/templates/admin_panil.html
+++ b/templates/admin_panil.html
@@ -7,14 +7,144 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <title></title>
     <link rel="stylesheet" href="/static/style.css">
-
-    <style>
-    
+    <script>
+        function myFunction() {
+          // Declare variables
+          var input, filter, ul, li, a, i, txtValue;
+          input = document.getElementById('myInput');
+          filter = input.value.toUpperCase();
+          ul = document.getElementById("myUL");
+          li = ul.getElementsByTagName('li');
         
+          // Loop through all list items, and hide those who don't match the search query
+          for (i = 0; i < li.length; i++) {
+            a = li[i].getElementsByTagName("a")[0];
+            txtValue = a.textContent || a.innerText;
+            if (txtValue.toUpperCase().indexOf(filter) > -1) {
+              li[i].style.display = "";
+            } else {
+              li[i].style.display = "none";
+            }
+          }
+        }
+        </script>
+    <style>
+        .admin_main_container{
+            height: 90;
+            width: 100%;
+            display: flex;
+            flex-direction: row;
 
+        }
+
+        .admin_appointments{
+            flex-basis: 33.33%;
+            background-color:  rgb(205,226,249);
+            height: 86vh;
+            border-radius: 5%;
+            margin: 1%;
+            padding: 2%;
+            overflow-y: scroll;
+            scrollbar-color: rebeccapurple green;
+            scrollbar-width: thin;
+
+        }
+        
+        .admin_page{
+            flex-basis: 66.66%;
+            
+            display: flex;
+            flex-direction: column;
+            height: 90vh;
+        }
+
+        .admin_page_patients{
+            height: 50vh;
+            background-color:  rgb(205,226,249);
+            margin: 1%;
+            border-radius: 5%;
+            padding: 2%;
+
+        }
+
+        .admin_page_2{
+            height: 50vh;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-around;
+        }
+
+        .admin_page_2_financials{
+            width: 50%;
+            background-color:  rgb(205,226,249);
+            margin: 1%;
+            border-radius: 5%;
+            padding: 2%;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+        }
+
+        .admin_page_2_analytics{
+            width: 50%;
+            background-color:  rgb(205,226,249);
+            margin: 1%;
+            border-radius: 5%;
+            padding: 2%;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+        }
+
+        .button{
+    background-color: rgb(230,121,92);
+    width: 100%;
+    height: 50;
+    margin-top: 2%;
+    margin-bottom: 5%;
+    border-radius: 5%;
+    border-color: rgb(230,121,92);
+    color: white;
+    font-size: 20;
+}
+
+
+#myInput {
+  background-image: url('/css/searchicon.png'); /* Add a search icon to input */
+  background-position: 10px 12px; /* Position the search icon */
+  background-repeat: no-repeat; /* Do not repeat the icon image */
+  width: 100%; /* Full-width */
+  font-size: 16px; /* Increase font-size */
+  padding: 12px 20px 12px 40px; /* Add some padding */
+  border: 1px solid #ddd; /* Add a grey border */
+  margin-bottom: 12px; /* Add some space below the input */
+}
+
+#myUL {
+  /* Remove default list styling */
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+#myUL li a {
+  border: 1px solid #ddd; /* Add a border to all links */
+  margin-top: -1px; /* Prevent double borders */
+  background-color: #f6f6f6; /* Grey background color */
+  padding: 12px; /* Add some padding */
+  text-decoration: none; /* Remove default text underline */
+  font-size: 18px; /* Increase the font-size */
+  color: black; /* Add a black text color */
+  display: block; /* Make it into a block element to fill the whole list */
+}
+
+#myUL li a:hover:not(.header) {
+  background-color: #eee; /* Add a hover effect to all links, except for headers */
+}
     </style>
 </head>
 <body>
+
     <nav class="index_nav" >
         <div >
           <a class="navbar-brand" href="#">
@@ -22,29 +152,150 @@
           </a>
         </div>
         <div>
-            <img src="/static/facebook.png" alt="" width="50" height="auto">
-            <img src="/static/instagram.png" alt="" width="50" height="auto">
-            <img src="/static/twitter.png" alt="" width="50" height="auto">
+            <button><a href="/add_new_patient">add new patient</a></button>
+            
         </div>
     </nav>
     
-<a href="/add_new_patient">add new patient</a>
-    <section class="admin_panil_sec1">
-
-        <!--form action="/patient_file" method="post">
-            <ul>
-                {% for patient in patients %}
-                    <li><input type="radio" name="n" value="{{ patient.name }}">{{ patient.name }}</li>
+    <div class="admin_main_container">
+        <div class="admin_appointments">
+            <h3>today's appointments</h3>
+        <table class="table table-striped">
+            <tr>
+              <th>patient</th>
+              <th>date</th>
+              <th>time</th>
+            </tr>
+            {% for appointment in today_appointments %}
+                
+                    <tr>
+                    <td>{{ appointment['patient_name'].strip('0123456789') }}</td>
+                    <td>{{ appointment['date'] }}</td>
+                    <td>{{ appointment['time'] }}</td>
                     
+                    
+    
+                
+                </tr>
+            {% endfor %}
+          </table>
+          <h3>all appointments</h3>
+          <table class="table table-striped">
+            <tr>
+              <th>patient</th>
+              <th>date</th>
+              <th>time</th>
+            </tr>
+            {% for appointment in all_appointments %}
+                
+                    <tr>
+                    <td>{{ appointment['patient_name'].strip('0123456789') }}</td>
+                    <td>{{ appointment['date'] }}</td>
+                    <td>{{ appointment['time'] }}</td>
+                    
+                    
+    
+                
+                </tr>
+            {% endfor %}
+          </table>
+        </div>
+        <div class="admin_page">
+            <div class="admin_page_patients">
+                <h3>patient lest</h3>
+                <form action="/patient_file" method="post">
+            
+                    {{form.hidden_tag()}}
+                    {{form.name}}
+                        
+                    <button class="btn btn-outline-primary" type="submit" value="submit">go to patient file</button>
+                </form>
+                <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names..">
+                {% for patient in patient_list%}
+                    <ul id="myUL">
+                        <li><a href="#">{{patient}}</a></li>
+                    </ul>
                 {% endfor %}
+            </div>
+            <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names..">
+
+            <ul id="myUL">
+            <li><a href="#">Adele</a></li>
+            <li><a href="#">Agnes</a></li>
+
+            <li><a href="#">Billy</a></li>
+            <li><a href="#">Bob</a></li>
+
+            <li><a href="#">Calvin</a></li>
+            <li><a href="#">Christina</a></li>
+            <li><a href="#">Cindy</a></li>
             </ul>
-            <button class="btn btn-outline-primary" type="submit" value="submit">go to patient file</button>
-        </form-->
+            <script>
+                function myFunction() {
+                  // Declare variables
+                  var input, filter, ul, li, a, i, txtValue;
+                  input = document.getElementById('myInput');
+                  filter = input.value.toUpperCase();
+                  ul = document.getElementById("myUL");
+                  li = ul.getElementsByTagName('li');
+                
+                  // Loop through all list items, and hide those who don't match the search query
+                  for (i = 0; i < li.length; i++) {
+                    a = li[i].getElementsByTagName("a")[0];
+                    txtValue = a.textContent || a.innerText;
+                    if (txtValue.toUpperCase().indexOf(filter) > -1) {
+                      li[i].style.display = "";
+                    } else {
+                      li[i].style.display = "none";
+                    }
+                  }
+                }
+                </script>
+            <div class="admin_page_2">
+                <div class="admin_page_2_financials">
+                    <h4>total income this year:{{total_income}}</h4>
+                    <h4>totla income this month: {{last_month_income}}</h4>
+                    <form action="" method="post">
+                        <input type="submit" value="financials" class="button">
+                    </form>
+                </div>
+                <div class="admin_page_2_analytics">
+                    <button class="button">clinic analytics</button>
+                    <form action="" method="post">
+                        <select name="" id="" class="">
+                            <option value="">beshoy nady wadee</option>
+                        </select>
+                        <input type="submit" value="operator analytics" class="button">
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--section>
+        <h3>today's appointments</h3>
+        <table class="table table-striped">
+            <tr>
+              <th>patient nam</th>
+              <th>date</th>
+              <th>time</th>
+            </tr>
+            {% for appointment in today_appointments %}
+                
+                    <tr>
+                    <td>{{ appointment['patient_name'].strip('0123456789') }}</td>
+                    <td>{{ appointment['date'] }}</td>
+                    <td>{{ appointment['time'] }}</td>
+                    
+                    
+    
+                
+                </tr>
+            {% endfor %}
+          </table>
+    </section-->
 
-    </section>
-
-    <section class="admin_panil_sec1">
-        {{patient_list}}
+    <!--section class="admin_panil_sec1">
+        
         <form action="/patient_file" method="post">
             
             {{form.hidden_tag()}}
@@ -53,14 +304,14 @@
             <button class="btn btn-outline-primary" type="submit" value="submit">go to patient file</button>
         </form>
 
-    </section>
-    {% if current_user.is_authenticated %}
+    </section-->
+    <!--{% if current_user.is_authenticated %}
     Hi {{ current_user.name }}! <a href="/logout">logout</a>
-    {% endif %}
+    {% endif %}-->
         
     
 
-    <section >
+    <!--section >
         <h1>financial </h1>
 
         <h3>this year income</h3>
@@ -101,34 +352,8 @@
         implant = {{income_from_implant_this_month}}
         <br>
         other = {{income_from_other_this_month}}
-    </section>
+    </section-->
 
-
-
-    <section>
-        <h1>patients waiting in the lobby</h1>
-        <table class="table table-striped">
-            <tr>
-              <th>patient name</th>
-            </tr>
-            {% for patient in waiting_list %}
-                
-                <tr>
-                    <td>{{ patient['name'] }}</td>  
-                </tr>
-            {% endfor %}
-          </table>
-    </section>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous">
-    const myModal = document.getElementById('myModal')
-const myInput = document.getElementById('myInput')
-
-myModal.addEventListener('shown.bs.modal', () => {
-  myInput.focus()
-})
-</script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js" integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK" crossorigin="anonymous"></script>
 </body>
 </html>
 
