--- a/templates/admin_panil.html
+++ b/templates/admin_panil.html
@@ -5,30 +5,63 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css?family=Tangerine">
     <title></title>
     <link rel="stylesheet" href="/static/style.css">
-    <script>
-        function myFunction() {
-          // Declare variables
-          var input, filter, ul, li, a, i, txtValue;
-          input = document.getElementById('myInput');
-          filter = input.value.toUpperCase();
-          ul = document.getElementById("myUL");
-          li = ul.getElementsByTagName('li');
-        
-          // Loop through all list items, and hide those who don't match the search query
-          for (i = 0; i < li.length; i++) {
-            a = li[i].getElementsByTagName("a")[0];
-            txtValue = a.textContent || a.innerText;
-            if (txtValue.toUpperCase().indexOf(filter) > -1) {
-              li[i].style.display = "";
-            } else {
-              li[i].style.display = "none";
-            }
-          }
-        }
-        </script>
+    
     <style>
+        body{
+          font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+          
+
+        }
+        .admin_appointments::-webkit-scrollbar{
+          width: 1vw;
+        }
+
+        .admin_appointments::-webkit-scrollbar-thumb{
+          background-color: rgb(48,107,232);
+          border-radius: 25px;
+        }
+        .admin_appointments::-webkit-scrollbar-track{
+          background-color:rgba(92, 92, 92, 0.459);
+          border-radius: 25px;
+        }
+
+        .admin_page_patients::-webkit-scrollbar{
+          width: 1vw;
+        }
+
+        .admin_page_patients::-webkit-scrollbar-thumb{
+          background-color: rgb(48,107,232);
+          border-radius: 25px;
+        }
+        .admin_page_patients::-webkit-scrollbar-track{
+          background-color: rgba(92, 92, 92, 0.459);
+          border-radius: 25px;
+        }
+        .admin_appointments::-webkit-scrollbar-button{
+          display: block;
+        }
+
+        .nav_buttons{
+          display: flex;
+          flex-direction: row;
+          justify-content: space-between;
+          width: 25vw;
+        }
+
+        #add_patient_button{
+         
+          flex-basis: 40%;
+        }
+
+        #add_operator_button{
+          
+          flex-basis: 40%;
+        }
+
         .admin_main_container{
             height: 90;
             width: 100%;
@@ -39,14 +72,16 @@
 
         .admin_appointments{
             flex-basis: 33.33%;
-            background-color:  rgb(205,226,249);
+            background-color:  white;
             height: 86vh;
             border-radius: 5%;
             margin: 1%;
             padding: 2%;
             overflow-y: scroll;
-            scrollbar-color: rebeccapurple green;
+            scrollbar-color: #0202ff #e40000;
             scrollbar-width: thin;
+            transition: all .4s ease-in-out;
+
 
         }
         
@@ -60,11 +95,18 @@
 
         .admin_page_patients{
             height: 50vh;
-            background-color:  rgb(205,226,249);
+            background-color: white;
             margin: 1%;
-            border-radius: 5%;
+            border-radius: 25px;
             padding: 2%;
+            overflow-y: scroll;
+            transition: all .4s ease-in-out;
 
+
+        }
+
+        .patient_list {
+          overflow-y: scroll;
         }
 
         .admin_page_2{
@@ -76,71 +118,131 @@
 
         .admin_page_2_financials{
             width: 50%;
-            background-color:  rgb(205,226,249);
+            background-color: white;
             margin: 1%;
             border-radius: 5%;
             padding: 2%;
             display: flex;
             flex-direction: column;
             justify-content: space-between;
+            transition: all .4s ease-in-out;
+        }
+
+        .admin_page_2_financials:hover{
+          background-image: url('/static/dollar_backgrownd.png');
+          background-repeat: no-repeat;
+          background-size:cover;
+          color: white;
+          /*background-image:linear-gradient(45deg, #0202ff75,  #e400007c ) ;*/
+          box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+          transform: scale(1.05);
+        }
+
+        .admin_page_2_analytics:hover{
+          background-image: url('/static/analysis_backgrownd.png');
+          background-repeat: no-repeat;
+          background-size:cover;
+          color: white;
+          /*background-image:linear-gradient(45deg, #0202ff75,  #e400007c ) ;*/
+          box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+          transform: scale(1.05);
+        }
+
+        .admin_appointments:hover{
+          background-image: url('/static/appointment_backgrownd.png');
+          background-repeat: no-repeat;
+          background-size:cover;
+          color: white;
+          /*background-image:linear-gradient(45deg, #0202ff75,  #e400007c ) ;*/
+          box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+          transform: scale(1.03);
+        }
+
+        .admin_page_patients:hover{
+          background-image: url('/static/patient_backgrownd_final.png');
+          background-repeat: no-repeat;
+          background-size:cover;
+          color: white;
+          /*background-image:linear-gradient(45deg, #0202ff75,  #e400007c ) ;*/
+          box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+          transform: scale(1.03);
+          table-layout: fixed;
+        }
+        .admin_appointments:hover table{
+          color: inherit;
         }
 
         .admin_page_2_analytics{
             width: 50%;
-            background-color:  rgb(205,226,249);
+            background-color: white;
             margin: 1%;
             border-radius: 5%;
             padding: 2%;
             display: flex;
             flex-direction: column;
             justify-content: space-between;
+            transition: all .4s ease-in-out;
+
         }
 
         .button{
-    background-color: rgb(230,121,92);
+    background-color:rgb(250,66,112);
     width: 100%;
     height: 50;
     margin-top: 2%;
     margin-bottom: 5%;
-    border-radius: 5%;
-    border-color: rgb(230,121,92);
+    border-radius: 25px;
+    border: none;
     color: white;
     font-size: 20;
 }
 
+        .button_blue{
+            background-color: rgb(48,107,232);
+            width: 100%;
+            height: 50;
+            margin-top: 2%;
+            margin-bottom: 5%;
+            border-radius: 25px;
+            border: none;
+            color: white;
+            font-size: 20;
+        }
+        .form_search_submit{
+          display: flex;
+          flex-direction: row;
+          height: 10vh;
+          justify-content: space-between;
+          align-items: center;
+        }
+        #admin_form_submit{
+          flex-basis: 33%;
+        }
+        
 
-#myInput {
-  background-image: url('/css/searchicon.png'); /* Add a search icon to input */
-  background-position: 10px 12px; /* Position the search icon */
-  background-repeat: no-repeat; /* Do not repeat the icon image */
-  width: 100%; /* Full-width */
-  font-size: 16px; /* Increase font-size */
-  padding: 12px 20px 12px 40px; /* Add some padding */
-  border: 1px solid #ddd; /* Add a grey border */
-  margin-bottom: 12px; /* Add some space below the input */
+    /* (A) SEARCH BOX */
+    #the-filter {
+  box-sizing: border-box;
+  width: 100%;
+  flex-basis: 66%;
+  margin-bottom: 15px;
+  padding: 10px;
+  border-radius: 25px;
 }
-
-#myUL {
-  /* Remove default list styling */
-  list-style-type: none;
-  padding: 0;
+ 
+/* (B) LIST */
+#the-list {
+  list-style: none;
   margin: 0;
+  padding: 0;
+  
+}
+#the-list li {
+  padding: 10px;
+  border-bottom: 2px solid #ffe9e9;
 }
 
-#myUL li a {
-  border: 1px solid #ddd; /* Add a border to all links */
-  margin-top: -1px; /* Prevent double borders */
-  background-color: #f6f6f6; /* Grey background color */
-  padding: 12px; /* Add some padding */
-  text-decoration: none; /* Remove default text underline */
-  font-size: 18px; /* Increase the font-size */
-  color: black; /* Add a black text color */
-  display: block; /* Make it into a block element to fill the whole list */
-}
-
-#myUL li a:hover:not(.header) {
-  background-color: #eee; /* Add a hover effect to all links, except for headers */
-}
+#the-list li.hide { display: none; }
     </style>
 </head>
 <body>
@@ -151,20 +253,22 @@
             <img src="/static/dental_manager_logo-removebg-preview.png" alt="" width="300" height=auto>
           </a>
         </div>
-        <div>
-            <button><a href="/add_new_patient">add new patient</a></button>
+        <div class="nav_buttons">
+            <a href="/add_new_patient"><button class="button_blue" id="add_patient_button">Add new patient</button></a>
+            <a href="/add_new_patient"><button class="button_blue" id="add_operator_button">Add new operator</button></a>
+
             
         </div>
     </nav>
     
     <div class="admin_main_container">
         <div class="admin_appointments">
-            <h3>today's appointments</h3>
-        <table class="table table-striped">
+            <h3>Today's appointments</h3>
+        <table class="table table-hover">
             <tr>
-              <th>patient</th>
-              <th>date</th>
-              <th>time</th>
+              <th>Patient</th>
+              <th>Date</th>
+              <th>Time</th>
             </tr>
             {% for appointment in today_appointments %}
                 
@@ -179,8 +283,8 @@
                 </tr>
             {% endfor %}
           </table>
-          <h3>all appointments</h3>
-          <table class="table table-striped">
+          <h3>All appointments</h3>
+          <table class="table table-hover">
             <tr>
               <th>patient</th>
               <th>date</th>
@@ -202,67 +306,43 @@
         </div>
         <div class="admin_page">
             <div class="admin_page_patients">
-                <h3>patient lest</h3>
-                <form action="/patient_file" method="post">
+                <h3>Patient list</h3>
+                <!--form action="/patient_file" method="post">
             
                     {{form.hidden_tag()}}
                     {{form.name}}
                         
                     <button class="btn btn-outline-primary" type="submit" value="submit">go to patient file</button>
-                </form>
-                <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names..">
+                </form-->
+                <form action="/patient_file" method="post">
+                <div class="form_search_submit">
+                  <input type="text" id="the-filter" onkeyup="myFunction()" placeholder="Search for names..">
+                  <input type="submit" value="go to patient file" class="button" id="admin_form_submit">
+                </div>
+                <div class="patien_list">
                 {% for patient in patient_list%}
-                    <ul id="myUL">
-                        <li><a href="#">{{patient}}</a></li>
+                    
+                    <ul id="the-list">
+                        <label for="name"></label><li><input type="radio" name="name" id="" value="{{patient}}"> {{patient.strip('1234567890')}}</li></label>
                     </ul>
                 {% endfor %}
+                </div>
+              </form>
             </div>
-            <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names..">
-
-            <ul id="myUL">
-            <li><a href="#">Adele</a></li>
-            <li><a href="#">Agnes</a></li>
-
-            <li><a href="#">Billy</a></li>
-            <li><a href="#">Bob</a></li>
-
-            <li><a href="#">Calvin</a></li>
-            <li><a href="#">Christina</a></li>
-            <li><a href="#">Cindy</a></li>
-            </ul>
-            <script>
-                function myFunction() {
-                  // Declare variables
-                  var input, filter, ul, li, a, i, txtValue;
-                  input = document.getElementById('myInput');
-                  filter = input.value.toUpperCase();
-                  ul = document.getElementById("myUL");
-                  li = ul.getElementsByTagName('li');
-                
-                  // Loop through all list items, and hide those who don't match the search query
-                  for (i = 0; i < li.length; i++) {
-                    a = li[i].getElementsByTagName("a")[0];
-                    txtValue = a.textContent || a.innerText;
-                    if (txtValue.toUpperCase().indexOf(filter) > -1) {
-                      li[i].style.display = "";
-                    } else {
-                      li[i].style.display = "none";
-                    }
-                  }
-                }
-                </script>
+            
+            
             <div class="admin_page_2">
                 <div class="admin_page_2_financials">
-                    <h4>total income this year:{{total_income}}</h4>
-                    <h4>totla income this month: {{last_month_income}}</h4>
-                    <form action="" method="post">
-                        <input type="submit" value="financials" class="button">
-                    </form>
+                    <h2><b>Financials</b></h2>
+                    <h4>Total income this year:{{total_income}}</h4>
+                    <h4>Total income this month: {{last_month_income}}</h4>
+                    <a href="/financials"><button class="button">financials</button></a>
                 </div>
                 <div class="admin_page_2_analytics">
-                    <button class="button">clinic analytics</button>
+                    <h2><b>Analytics</b></h2>
+                    <button class="button_blue"> clinic analytics</button>
                     <form action="" method="post">
-                        <select name="" id="" class="">
+                        <select name="" id="" class="button_blue" style="background-color: white; color:black">
                             <option value="">beshoy nady wadee</option>
                         </select>
                         <input type="submit" value="operator analytics" class="button">
@@ -353,7 +433,43 @@
         <br>
         other = {{income_from_other_this_month}}
     </section-->
+    <!--h2>My Phonebook</h2>
 
+<input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names.." title="Type in a name">
+
+<ul id="myUL">
+  <li><a href="#">Adele</a></li>
+  <li><a href="#">Agnes</a></li>
+
+  <li><a href="#">Billy</a></li>
+  <li><a href="#">Bob</a></li>
+
+  <li><a href="#">Calvin</a></li>
+  <li><a href="#">Christina</a></li>
+  <li><a href="#">Cindy</a></li>
+</ul-->
+
+<script>
+
+window.addEventListener("load", () => {
+  // (A) GET HTML ELEMENTS
+  var filter = document.getElementById("the-filter"), // search box
+      list = document.querySelectorAll("#the-list li"); // all list items
+ 
+  // (B) ATTACH KEY UP LISTENER TO SEARCH BOX
+  filter.onkeyup = () => {
+    // (B1) GET CURRENT SEARCH TERM
+    let search = filter.value.toLowerCase();
+ 
+    // (B2) LOOP THROUGH LIST ITEMS - ONLY SHOW THOSE THAT MATCH SEARCH
+    for (let i of list) {
+      let item = i.innerHTML.toLowerCase();
+      if (item.indexOf(search) == -1) { i.classList.add("hide"); }
+      else { i.classList.remove("hide"); }
+    }
+  };
+});
+</script>
 </body>
 </html>
 
