--- a/templates/admin_panil.html
+++ b/templates/admin_panil.html
@@ -340,7 +340,7 @@
                 </div>
                 <div class="admin_page_2_analytics">
                     <h2><b>Analytics</b></h2>
-                    <button class="button_blue"> clinic analytics</button>
+                    <a href="/clinic_analytics"><button class="button_blue"> clinic analytics</button></a>
                     <form action="" method="post">
                         <select name="" id="" class="button_blue" style="background-color: white; color:black">
                             <option value="">beshoy nady wadee</option>
