--- a/templates/patient_file.html
+++ b/templates/patient_file.html
@@ -120,4 +120,5 @@
     </form>
     
 </section>
+<img src="/static/UL1_sound_removebg.png" alt="" style="height: 200; width:auto;">
 {% endblock %}
